# VocalMind

./: .env.example  .env.template  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  llm_trigger.md  measure_baseline.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yml  ci.yml  frontend.yml  rag_ci.yml
AudioData/nexalink/: README.md
Experiments/Emotion-Recognition/: funasr-emotion-recognition.ipynb  text-emotion-recognition.ipynb
Experiments/Emotion-Recognition/emotion_api/: app.py  requirements.txt
Experiments/Rag/: .env.example  README.md  compare_answers.py  pyproject.toml  sample_conversation.json  test_conversations.json
Experiments/Rag-Dataset/: rag_dataset.py  telecom_rag_dataset.csv  telecom_rag_dataset.json  telecom_rag_dataset.jsonl
Experiments/Speech-Pipeline/: README.md  emotion_analysis.py  main.py  main_v2.py  main_v3_emotion_comparison.py  main_v4_hybrid.py  main_v5_final.py  run_demo.py  run_v2.py  speech_pipeline.py
Experiments/Speech-Pipeline-Tests/: VocalMind Pipeline V2 - Technical Docu.md  inference_pipeline_v2.py  run_demo.py
Experiments/Speech-Pipeline/whisperx-service/: .dockerignore  app.py  pyproject.toml
Experiments/Voice-Generation/: voice_generation.py  voice_generation_overlap.py
Experiments/ingestion-pipeline/: test_ingestion.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  get_users.py  ingest_trace.txt  main.py  pyproject.toml  requirements.txt  run_ingest.txt  run_ingest2.txt  test_all_kaggle_apis.py  test_diarization_real.py  test_emotion.py  test_rag.py  test_telecom_api.py  traceback.txt  verify_hash.py
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: agents.py  assistant.py  dashboard.py  interactions.py  knowledge.py  rag.py  users.py
backend/app/api/routes/auth/: router.py  schemas.py  service.py
backend/app/api/routes/diarization/: router.py  service.py
backend/app/api/routes/emotion/: dispute_router.py  pipeline.py  router.py  service.py
backend/app/api/routes/full/: router.py  service.py
backend/app/api/routes/llm_trigger/: __init__.py  router.py
backend/app/api/routes/transcription/: router.py  service.py
backend/app/api/routes/vad/: router.py  service.py
backend/app/api/v1/endpoints/: auth.py  emotion.py
backend/app/core/: cache.py  config.py  database.py  emotion_fusion.py  inference_contracts.py  interaction_processing.py  kaggle_client.py  security.py
backend/app/llm_trigger/: __init__.py  chains.py  prompts.py  retrieval.py  schemas.py  service.py
backend/app/models/: __init__.py  agent.py  emotion_event.py  enums.py  faq.py  feedback.py  human_feedback.py  interaction.py  interaction_score.py  llm_trigger_cache.py  organization.py  policy.py  processing.py  query.py  snapshot.py  transcript.py  user.py  utterance.py
backend/app/schemas/: assistant.py  user.py
backend/app/services/: emotion_client.py  google_auth.py
backend/docs/llm_trigger_files/: README.md  api_routes_llm_trigger___init__.md  api_routes_llm_trigger_router.md  app_llm_trigger___init__.md  app_llm_trigger_chains.md  app_llm_trigger_prompts.md  app_llm_trigger_retrieval.md  app_llm_trigger_schemas.md  app_llm_trigger_service.md  tests_test_llm_trigger_service.md
backend/manager_agent/: __init__.py  chat_interface.py
backend/nlp_engine/: __init__.py  root_cause_reasoning.py  sentiment_analyzer.py
backend/rag_evaluator/: __init__.py  grader_agent.py  pinecone_handler.py
backend/scripts/: __init__.py  migrate_parsed_docs.py  purge_seeded_interactions.py  seed_nexalink.py
backend/speech_pipeline/: __init__.py  audio_processor.py  emotion_recognition.py
backend/tests/: conftest.py  test_assistant.py  test_auth.py  test_auth_service.py  test_dashboard.py  test_emotion.py  test_emotion_fusion.py  test_emotion_service.py  test_inference_routes.py  test_inference_services.py  test_interaction_ingestion.py  test_interactions_emotion_comparison.py  test_interactions_llm_triggers.py  test_llm_trigger_service.py  test_main.py  test_model_validation.py  test_pipeline.py  test_security.py  test_security_headers.py  test_sop_retrieval.py  test_unauthorized_access.py
docker/init/: 01_schema.sql  02_seed.sql
docker/vad/: app.py
docker/whisperx/: Dockerfile
docs/: README.md
docs/explainability/: EVIDENCE_ANCHORED_EXPLAINABILITY_LAYER.md
docs/llm_trigger/: LLM_TRIGGER_FEATURE_GUIDE.md  README.md
docs/rag/: INGESTION_PIPELINE.md  RAG_OVERVIEW.md
frontend/: .dockerignore  .nycrc  Dockerfile  README.md  cypress.config.ts  eslint.config.mjs  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.setup.tsx
frontend/.nyc_output/: out.json
frontend/cypress/: tsconfig.json
frontend/e2e/: agent.spec.ts  auth.spec.ts  dashboard.spec.ts  navigation.spec.ts
frontend/src/: auth.js  middleware.js  vite-env.d.ts
infra/scripts/: docker_compose_retry.ps1  migrate.py  seed_database.py  seed_prod.py
kaggle/: README.md  api_response_schema.json  kaggle_worker.py
research/: README.md  test_kaggle.py
research/emotion/: emotion_model_comparison.ipynb
research/finetuning/: finetuning v0.1.ipynb
research/voice-gen/: voice_generation.py  voice_generation_overlap.py
scripts/: final_check.py  migrate_supabase.py  seed_database.py  seed_prod.py  seed_prod_robust.py
services/emotion/: .dockerignore  Dockerfile  app.py  download_model.py  requirements.txt
services/rag/: .env.example  Dockerfile  README.md  __init__.py  config.py  evaluator.py  ingest.py  ingest_all.txt  main.py  pyproject.toml  query_engine.py
services/rag/ingestion-pipeline/: Dockerfile
services/rag/rag_app/: pipeline.py
services/rag/rag_app/evaluation/: custom_evaluator.py
services/rag/tests/: test_config.py  test_evaluator.py  test_ingest.py  test_query_engine.py
services/vad/: .dockerignore  Dockerfile  download_model.py  requirements.txt
services/whisperx/: Dockerfile  app.py  pyproject.toml
(+116 files in other folders)
