[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.128.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "httpx>=0.28.1",
    "langchain-core>=0.3.80",
    "langchain-groq>=0.3.8",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.8.0",
    "pytest>=9.0.2",
    "qdrant-client>=1.15.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.33",
    "supabase>=2.28.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
